Fix Scrolling overflow X (Please Test)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+div {
+  overflow-x: hidden;
+}
+
 .containerCredits {
   box-shadow: 0px 3px 3px #e5e5e5;
 }
